fixed horizontal spacing issues on index.html

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 html {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
-    height: 100%;
 }
+
 body{
     background: #A8D0DB;
     margin: 0;
@@ -127,24 +127,30 @@ a:visited {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 500px;
-    width: 60%;
+    margin: auto;
+    min-width: auto;
+    max-width: 700px;
+    margin-top: 10px;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-left: auto;
 }
 
 #right {
     height: 500px;
-    width: 40%;
-    margin-right: 0px;
     padding-right: 0;
     right: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 10px;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-left: auto;
+    top: 50%;
 }
 
 #right img {
-    max-width: 80%;
-    height: auto;
     margin-right: 0px;
     padding-right: 0;
     right: 0;
@@ -156,5 +162,5 @@ a:visited {
     flex-direction: row;
     justify-content: center;
     align-items: space-between;
-    margin: 20px 40px 20px 40px;
+    margin: 20px 0 20px 0;
 }
